Replace deprecated spring annotation with Rollback